feat: reuse OpenCode structured output and todo